# hackattic

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.1153A29568FAE8B8.idx  main.cpp.DEA8699075793007.idx  tools.cpp.B7C8C2B56BAAAD1C.idx  tools.hpp.CBB8B8297C8C9DBA.idx
brute_force_zip/: main.py
help_me_unpack/: CMakeLists.txt  main.cpp
jotting_jwt/: server.py
mini_miner/: CMakeLists.txt  main.cpp
reading_qr/: main.py
tales_of_ssl/: CMakeLists.txt  cert.crt  main.cpp
tools/: CMakeLists.txt  pyproject.toml  tools.cpp  tools.hpp  tools.py
ws-chit-chat/: main.py  pyproject.toml
